parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__with_statement-4.snap
---
source: parser/src/parser/parser.rs
description: "with (a as b, c as d): pass"
---
Module {
    node: Node {
        start: 0,
        end: 27,
    },
    body: [
        WithStatement(
            With {
                node: Node {
                    start: 0,
                    end: 27,
                },
                items: [
                    WithItem {
                        node: Node {
                            start: 6,
                            end: 12,
                        },
                        context_expr: Name(
                            Name {
                                node: Node {
                                    start: 6,
                                    end: 7,
                                },
                                id: "a",
                            },
                        ),
                        optional_vars: Some(
                            Name(
                                Name {
                                    node: Node {
                                        start: 11,
                                        end: 12,
                                    },
                                    id: "b",
                                },
                            ),
                        ),
                    },
                    WithItem {
                        node: Node {
                            start: 14,
                            end: 20,
                        },
                        context_expr: Name(
                            Name {
                                node: Node {
                                    start: 14,
                                    end: 15,
                                },
                                id: "c",
                            },
                        ),
                        optional_vars: Some(
                            Name(
                                Name {
                                    node: Node {
                                        start: 19,
                                        end: 20,
                                    },
                                    id: "d",
                                },
                            ),
                        ),
                    },
                ],
                body: [
                    Pass(
                        Pass {
                            node: Node {
                                start: 23,
                                end: 27,
                            },
                        },
                    ),
                ],
            },
        ),
    ],
}
